--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     }
     
     body {
-        background-image: url("logo.jpeg");
+        background-image: url("logo.png");
         background-color: rgb(255,225,0);
     }
 </style>
