--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     body {
         background-image: url("logo.png");
         background-color: rgb(255,225,0);
+         background-size:     cover;                      /* <------ */
+        background-repeat:   no-repeat;
+        background-position: center center;
     }
 </style>
 </head>
