--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
          background-size:     cover;                      /* <------ */
         background-repeat:   no-repeat;
         background-position: center center;
+        filter: blur(8px);
+        -webkit-filter: blur(8px);
+        width: 75%;
     }
 </style>
 </head>
