--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
-<!DOCTYPE html><html lang="ca"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><meta name="authors" content="EngrescatsTIC"><title>Engrescats.cat - Oh oh!</title>
-<style>
-    *{  font-family: sans-serif;
-    }
-    
-    body {
-        background-image: url("logo.png");
-        background-color: rgb(255,225,0);
-         background-size:     cover;                      /* <------ */
-        background-repeat:   no-repeat;
-        background-position: center center;
-        filter: blur(8px);
-        -webkit-filter: blur(8px);
-        width: 75%;
-    }
-</style>
+<!DOCTYPE html>
+<html lang="ca">
+   <head><meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+      <meta name="authors" content="EngrescatsTIC">
+      <title>Engrescats.cat - Oh oh!</title>
+   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+   <style>
+       *{  font-family: sans-serif;
+       }
+
+       body {
+           background-image: url("logo.png");
+           background-color: rgb(255,225,0);
+            background-size:     cover;                      /* <------ */
+           background-repeat:   no-repeat;
+           background-position: center center;
+           filter: blur(8px);
+           -webkit-filter: blur(8px);
+           width: 75%;
+       }
+   </style>
 </head>
 <body>
   <p>Hola! La web no està dispoible de forma temporal. Si veus això és que ja estem solucionant el problema. Informa't pels canals oficials!</p>
