--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
        body {
            background-image: url("logo.png");
            background-color: rgb(255,225,0);
-            background-size:     cover;                      /* <------ */
-           background-repeat:   no-repeat;
+           background-size: cover;
+           background-repeat: no-repeat;
            background-position: center center;
            filter: blur(8px);
            -webkit-filter: blur(8px);
            width: 75%;
        }
+      p {
+         filter: blur(0px);
+         -webkit-filter: blur(0px);
+         width: 100%;
+      }
    </style>
 </head>
 <body>
