--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
            -webkit-filter: blur(8px);
            width: 75%;
        }
-      p {
-         filter: blur(0px);
-         -webkit-filter: blur(0px);
-         width: 100%;
+      #reset-this-root {
+         all: unset;
+         font-family: sans-serif;
       }
+      
    </style>
 </head>
 <body>
