--- a/index.html
+++ b/index.html
@@ -15,20 +15,17 @@
            background-size: cover;
            background-repeat: no-repeat;
            background-position: center center;
-           filter: blur(8px);
-           -webkit-filter: blur(8px);
-           width: 75%;
+           display: block;
+          -webkit-user-select: none;
+          margin: auto;
+          transition: background-color 300ms;
        }
-      #reset-this-root {
-         all: unset;
-         font-family: sans-serif;
-      }
       
    </style>
 </head>
 <body>
   <p>Hola! La web no està dispoible de forma temporal. Si veus això és que ja estem solucionant el problema. Informa't pels canals oficials!</p>
-  <img style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://http.cat/503" width="516" height="412">
+  <img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://http.cat/503" width="516" height="412">
   <!--Yup, GitHub dona allotjament gràtis així que aquí estem aprofitant-ho-->
   <p>Si necessites contactar amb EngrescatsTIC, escriu-nos a: albert.garangou@salle.url.edu</p>
 </body>
