--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           -webkit-user-select: none;
           margin: auto;
           transition: background-color 300ms;
+          width="1024"
        }
       
    </style>
