--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
       <meta name="authors" content="EngrescatsTIC">
       <title>Engrescats.cat - Oh oh!</title>
-   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+   <link rel="icon" type="image/x-icon" href="logo.png">
    <style>
        *{  font-family: sans-serif;
        }
