--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
       <title>Engrescats.cat - Oh oh!</title>
    <link rel="icon" type="image/x-icon" href="logo.png">
    <style>
-       *{  font-family: sans-serif;
-       }
-      
+      p { 
+         text-align: center;
+         font-family: sans-serif; 
+      }
    </style>
 </head>
 <body>
