--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    </style>
 </head>
 <body>
-     <img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://http.cat/503" width="276" height="336">
+     <img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="logo.png" width="276" height="336">
   <p>Hola! La web no està dispoible de forma temporal. Si veus això és que ja estem solucionant el problema. Informa't pels canals oficials!</p>
   <img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://http.cat/503" width="516" height="412">
   <!--Yup, GitHub dona allotjament gràtis així que aquí estem aprofitant-ho-->
