--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@
   <p>Hola! La web no està dispoible de forma temporal. Si veus això és que ja estem solucionant el problema. Informa't pels canals oficials!</p>
   <img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://http.cat/503" width="516" height="412">
   <!--Yup, GitHub dona allotjament gràtis així que aquí estem aprofitant-ho-->
-   <p>Si necessites contactar amb Engrescats, escriu-nos a: <bold>engrescatsurl@gmail.com</bold> o <bold>contacte@engrescats.cat</bold></p>
+   <p>Si necessites contactar amb Engrescats, escriu-nos a: <b>engrescatsurl@gmail.com</b>, <b>contacte@engrescats.cat</b> o pels canals oficials.</p>
 </body>
