--- a/index.html
+++ b/index.html
@@ -18,4 +18,5 @@
   <img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://http.cat/503" width="516" height="412">
   <!--Yup, GitHub dona allotjament gràtis així que aquí estem aprofitant-ho-->
    <p>Si necessites contactar amb Engrescats, escriu-nos a: <b>engrescatsurl@gmail.com</b>, <b>contacte@engrescats.cat</b> o pels canals oficials.</p>
+   <p>Per motius tècnics (web, serveis...) contactar amb <b>tic@engrescats.cat</b></p>
 </body>
