--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
       <title>Engrescats.cat - Oh oh!</title>
    <link rel="icon" type="image/x-icon" href="logo.png">
    <style>
+      body, html {
+         width: 100%;
+      }
       p { 
          text-align: center;
          font-family: sans-serif; 
