--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       
       @media only screen and (max-width: 600px) {
          #err {
-            width: 512;
+            width: 512 !important;
          }
       }
       
