--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          width: 100%;
       }
       
-      @media only screen and (max-width: 600px) {
+      @media only screen and (min-width: 600px) {
          #err {
             width: 512px !important;
          }
