--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
   <p>Hola! La web no està dispoible de forma temporal. Si veus això és que ja estem solucionant el problema. Informa't pels canals oficials!</p>
   <img id="err" style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://http.cat/503">
   <!--Yup, GitHub dona allotjament gràtis així que aquí estem aprofitant-ho-->
-   <p>Si necessites contactar amb Engrescats, escriu-nos a: <b>contacte@engrescats.cat</b> o pels canals oficials.</p>
-   <p>Per motius tècnics (web, serveis...) contactar amb <b>tic@engrescats.cat</b></p>
+   <p>Si necessites contactar amb Engrescats, escriu-nos a: <b><a href="mailto:contacte@engrescats.cat?Subject=[Engrescats]">contacte@engrescats.cat</a></b> o pels canals oficials.</p>
+   <p>Per motius tècnics (web, serveis...) contactar amb <b><a href="mailto:tic@engrescats.cat?Subject=[EngrescatsTIC]%20Problema%20Tècnic">tic@engrescats.cat</a></b></p>
 </body>
