--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       }
       p { 
          text-align: center;
-         font-family: sans-serif; 
+         font-family: Helvetica, sans-serif;
+         font-color: #333; 
       }
       #err {
          width: 85%;
