--- a/manteniment.html
+++ b/manteniment.html
@@ -4,7 +4,7 @@
       <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
       <meta name="authors" content="EngrescatsTIC">
       <title>Engrescats.cat - Oh oh!</title>
-   <link rel="icon" type="image/x-icon" href="logo.png">
+   <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/1/1f/Engrescats_de_la_URL_-_escut.png">
    <style>
       body, html {
          width: 100%;
