--- a/manteniment.html
+++ b/manteniment.html
@@ -28,7 +28,7 @@
    </style>
 </head>
 <body>
-  <img id="logo" style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Engrescats_de_la_URL_-_escut.png" width="138" height="168">
+  <img id="logo" style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://raw.githubusercontent.com/bertugarangou/engrescats.cat/main/Cartellv2.png" width="430" height="525">
   <p>Hola! La web no està dispoible de forma temporal. Si veus això és que ja estem solucionant el problema. Informa't pels canals oficials!</p>
   <img id="err" style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://http.cat/503">
   <!--Yup, GitHub dona allotjament gràtis així que aquí estem aprofitant-ho-->
