--- a/manteniment.html
+++ b/manteniment.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   <img id="logo" style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://raw.githubusercontent.com/bertugarangou/engrescats.cat/main/Cartellv2.png" width="430" height="525">
-  <p>Hola! La web no està dispoible de forma temporal. Si veus això és que ja estem solucionant el problema. Informa't pels canals oficials!</p>
+  <p>Hola! La web no està disponible de forma temporal. Si veus això és que ja estem solucionant el problema. Informa't pels canals oficials!</p>
   <img id="err" style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://http.cat/503">
   <!--Yup, GitHub dona allotjament gràtis així que aquí estem aprofitant-ho-->
    <p>Si necessites contactar amb Engrescats, escriu-nos a: <b><a href="mailto:contacte@engrescats.cat?Subject=[Engrescats]">contacte@engrescats.cat</a></b> o pels canals oficials.</p>
