--- a/manteniment.html
+++ b/manteniment.html
@@ -33,3 +33,4 @@
    <p>Si necessites contactar amb Engrescats, escriu-nos a: <b><a href="mailto:contacte@engrescats.cat?Subject=[Engrescats]">contacte@engrescats.cat</a></b> o pels canals oficials.</p>
    <p>Per motius tècnics (web, serveis...) contactar amb <b><a href="mailto:tic@engrescats.cat?Subject=[EngrescatsTIC]%20Problema%20Tècnic">tic@engrescats.cat</a></b></p>
 </body>
+</html>
