--- a/dev/index.html
+++ b/dev/index.html
@@ -8,12 +8,12 @@
   <meta name="author" content="Carquinyolis">
   <link rel="icon" href=""> <!--todo: add favicon-->
 
-  <title>BM-Carquinyolis</title>
+  <title>Els Engrescats de la URL</title>
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <!-- Custom styles for this template -->
-  <link href="/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 <body>
 
 <header>
@@ -27,8 +27,8 @@
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contacte i més pàgines</h4>
           <ul class="list-unstyled">
-            <li><a href="https://github.com/carquinyoliscat/barcelonamultimedia" class="text-white">GitHub</a></li>
-            <li><a href="https://getbootstrap.com/docs/4.0/examples/album/#" class="text-white">Correu</a></li>
+            <li><a href="" class="text-white">AA</a></li>
+            <li><a href="" class="text-white">BB</a></li>
           </ul>
         </div>
       </div>
@@ -51,11 +51,9 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1 class="jumbotron-heading">Arxiu dels videojocs de <br> Barcelona Multimèdia</h1>
-      <p class="lead text-muted">Aquí podràs troabr els jocs per PC que es van publicar. Si no en trobes algun, encara no l'hem pogut recollir!</p>
+      <h1 class="jumbotron-heading">Els Engrescats de la URL!</h1>
+      <p class="lead text-muted">Som la Colla Castellera Universitària Els Engrescats de la Universitat Ramon Llull<p>
       <p>
-        <!--<a href="https://getbootstrap.com/docs/4.0/examples/album/#" class="btn btn-primary my-2">Main call to action</a>
-        <a href="https://getbootstrap.com/docs/4.0/examples/album/#" class="btn btn-secondary my-2">Secondary action</a>-->
       </p>
     </div>
   </section>
@@ -220,9 +218,8 @@
     <p class="float-right">
       <a href="/#">Torna amunt</a>
     </p>
-    <p>Web © <a href="barcelonamultimedia.carquinyolis.cat">barcelonamultimedia.carquinyolis.cat</a>.</p>
-    <p>Software, noms, imatges i tot el que pertany a © <a  href="https://http.cat/status/301">Barcelona Multimèdia</a> i els respectius propietaris.</p>
-    <p>Nota lega: Aquesta web no emmagatzema cap software. Només mostra els llocs on es poden obtenir. Si vols que eliminem quelcom ens pots contactar i ho farem encantats.</p>
+    <p>Web © <a href="engrescats.cat">engrescats.cat</a>.</p>
+    <p>Noms, imatges, descripcions i tot el que pertany a la colla és propietat dels seus respectius propietaris i de la colla.</p>
   </div>
 </footer>
 
