--- a/dev/index.html
+++ b/dev/index.html
@@ -9,8 +9,8 @@
   <link rel="icon" href=""> <!--todo: add favicon-->
 
   <title>Els Engrescats de la URL</title>
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- Bootstrap core CSS edited -->
+  <link rel="stylesheet" href="bootsrap.min.css">
 
   <!-- Custom styles for this template -->
   <link href="style.css" rel="stylesheet">
