--- a/dev/index.html
+++ b/dev/index.html
@@ -10,7 +10,7 @@
 
   <title>Els Engrescats de la URL</title>
   <!-- Bootstrap core CSS edited -->
-  <link rel="stylesheet" href="/bootsrap.min.css">
+  <link rel="stylesheet" href="bootstrap.min.css">
 
   <!-- Custom styles for this template -->
   <link href="style.css" rel="stylesheet">
