--- a/dev/index.html
+++ b/dev/index.html
@@ -10,10 +10,10 @@
 
   <title>Els Engrescats de la URL</title>
   <!-- Bootstrap core CSS edited -->
-  <link rel="stylesheet" href="bootstrap.min.css">
+  <link rel="stylesheet" href="https://engrescats.cat/dev/bootstrap.min.css">
 
   <!-- Custom styles for this template -->
-  <link href="style.css" rel="stylesheet">
+  <link href="https://engrescats.cat/dev/style.css" rel="stylesheet">
 <body>
 
 <header>
