--- a/dev/index.html
+++ b/dev/index.html
@@ -25,7 +25,7 @@
           <p class="text-muted">Deu ésser fet al gentilhom o. Memòria sotsmetent fàcilment a oblivió no. Gloriosa E trobant-se lo virtuós Comte en edat avançada. Costumes que a cavaller pertanyen; la setena e darrera és. Llong temps l'art de cavalleria ab grandíssima. Anys mogut per divinal inspiració propasà. Satisfer a cascú de vosaltres lo bon servir. De cinquanta-cinc anys mogut per divinal inspiració. Si li és possible per.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Contacte i més pàgines</h4>
+          <h4 class="text-white">Contacte i xarxes</h4>
           <ul class="list-unstyled">
             <li><a href="" class="text-white">AA</a></li>
             <li><a href="" class="text-white">BB</a></li>
