--- a/dev/index.html
+++ b/dev/index.html
@@ -8,9 +8,10 @@
   <meta name="author" content="Carquinyolis">
   <link rel="icon" href=""> <!--todo: add favicon-->
 
+
   <title>Els Engrescats de la URL</title>
   <!-- Bootstrap core CSS edited -->
-  <link rel="stylesheet" href="https://engrescats.cat/dev/bootstrap.min.css">
+  <link rel="stylesheet" href="https://engrescats.cat/dev/base_style.css">
 
   <!-- Custom styles for this template -->
   <link href="https://engrescats.cat/dev/style.css" rel="stylesheet">
