--- a/dev/index.html
+++ b/dev/index.html
@@ -12,11 +12,11 @@
   <title>Els Engrescats de la URL</title>
   <!-- Bootstrap core CSS edited -->
   <!-- Canviar a https://engrescats.cat/dev/... per posar a produccio>-->
-  <link rel="stylesheet" href="/dev/base_style.css">
+  <link rel="stylesheet" href="https://engrescats.cat/dev/base_style.css">
   <!-- Canviar a https://engrescats.cat/dev/... per posar a produccio>-->
 
   <!-- Custom styles for this template -->
-  <link href="/dev/style.css" rel="stylesheet">
+  <link href="https://engrescats.cat/dev/style.css" rel="stylesheet">
 <body>
 
 <header>
