--- a/dev/index.html
+++ b/dev/index.html
@@ -12,15 +12,15 @@
   <title>Els Engrescats de la URL</title>
   <!-- Bootstrap core CSS edited -->
   <!-- Canviar a https://engrescats.cat/dev/... per posar a produccio>-->
-  <link rel="stylesheet" href="https://engrescats.cat/dev/base_style.css">
+  <link rel="stylesheet" href="/dev/base_style.css">
   <!-- Canviar a https://engrescats.cat/dev/... per posar a produccio>-->
 
   <!-- Custom styles for this template -->
-  <link href="https://engrescats.cat/dev/style.css" rel="stylesheet">
+  <link href="/dev/style.css" rel="stylesheet">
 <body>
 
 <header>
-  <div class="bg-dark collapse show" id="navbarHeader" style="">
+  <div class="bg-dark collapse" id="navbarHeader" style="">
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
@@ -39,14 +39,14 @@
   </div>
   <div class="navbar navbar-dark bg-dark box-shadow">
     <div class="container d-flex justify-content-between">
-      <a href="https://www.salleurl.edu/ca/engrescats-url" class="navbar-brand d-flex align-items-center">
+     <!--<a href="https://www.salleurl.edu/ca/engrescats-url" class="navbar-brand d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
         <strong>Web Salle</strong>
       </a>
       <a href="https://ca.wikipedia.org/wiki/Engrescats_de_la_URL" class="navbar-brand d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
         <strong>Viquipèdia</strong>
-      </a>
+      </a>-->
       <a href="https://www.url.edu/ca" class="navbar-brand d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
         <strong>URL</strong>
@@ -63,11 +63,11 @@
   <section id="imatge-fons" class=" jumbotron text-center">
     <div class="container">
       <div class="overlay-color-imatge"></div>
-      <h1 class="jumbotron-heading">Els Engrescats de la URL!</h1>
-      <p class="text-muted lead">Som la Colla Castellera Universitària Els Engrescats de la Universitat Ramon Llull<p>
-      <p>
-      </p>
-    </div>
+        <div class="text-imatge-fons">
+          <h1 class="jumbotron-heading">Els Engrescats de la URL!</h1>
+          <p class="text-muted lead">Som la Colla Castellera de la Universitat Ramon Llull<p>
+        </div>
+      </div>
   </section>
 
   <div class="album py-5 bg-light">
